# boris-business-mvp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: index.py
boris_mvp/: __init__.py  app.py  bois.py  boris.py  execution.py  llm.py  server_config.py  sima.py
boris_mvp/cli/: main.py
boris_mvp/runtime/: __init__.py  api.py
checks/: check_pre_llm_gate.py
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/renderer/: index.html  renderer.js  styles.css
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PRD.md  SECURITY.md
