[project]
name = "boris-business-mvp"
version = "0.1.0"
description = "Local desktop-style MVP for BORIS Business task processing."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
boris = "boris_mvp.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["boris_mvp*"]
exclude = ["api*", "desktop*"]
